--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-slot": "^1.2.0",
     "@react-three/fiber": "^8.17.10",
     "@tabler/icons-react": "^3.21.0",
     "@tailwindcss/typography": "^0.5.16",
