--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "homepage": "",
   "dependencies": {
+    "@babel/core": "^7.26.10",
     "@craco/craco": "^7.1.0",
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.3.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-slot": "^1.2.0",
     "@react-three/fiber": "^8.17.10",
@@ -15,6 +17,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel-loader": "^10.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
