--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "simplex-noise": "^4.0.3",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
