--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-slot": "^1.2.0",
     "@react-three/fiber": "^8.17.10",
-    "@tabler/icons-react": "^3.21.0",
+    "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -23,6 +23,7 @@
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.453.0",
     "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
@@ -33,14 +34,14 @@
     "remark-gfm": "^4.0.1",
     "simplex-noise": "^4.0.3",
     "styled-components": "^6.1.13",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.170.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "craco start",
-"build": "CI=false NODE_OPTIONS=--no-warnings craco build",
+    "build": "CI=false NODE_OPTIONS=--no-warnings craco build",
     "test": "craco test"
   },
   "eslintConfig": {
