--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "5.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
+    "remove-markdown": "^0.6.0",
     "simplex-noise": "^4.0.3",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.6.0",
@@ -69,6 +70,7 @@
     "autoprefixer": "^10.4.20",
     "gh-pages": "^6.2.0",
     "postcss": "^8.4.47",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.4.14"
   }
 }
