--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/backend/node_modules
 /.pnp
 .pnp.js
 
@@ -11,13 +12,54 @@
 # production
 /build
 
+# environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.production
+
+# backend environment
+backend/.env
+backend/.env.local
+backend/.env.production
+
+# database
+backend/database.sqlite
+backend/database.sqlite-journal
+*.sqlite
+*.sqlite-journal
+*.db
+
+# logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+*.swp
+*.swo
+*~
+.vscode/
+.idea/
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# OS files
+Thumbs.db
+Desktop.ini
+
+
+
+# temporary files
+tmp/
+temp/
+*.tmp
